fix(contacts): remove overflow

--- a/app/components/content/styles.css
+++ b/app/components/content/styles.css
@@ -7,7 +7,6 @@
 	background-color: #ecdcc4;
 	background-image: url('../../images/background/content.jpg');
 	padding-bottom: 100px;
-	overflow: hidden;
 
 	&_padding {
 		padding-top: 50px;
